src/public/style.css
body{
  overflow-x: hidden;
}
li{
  list-style-type: none;
  display: inline-block;
}
/*home page*/
.homeBackGround{
  background-image: url(./images/theBeach.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.skyContainer{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: -20px;
}
#nameImg{
  height: 120px;
  margin-left: 60px;
  margin-top: 30px;
}
#webImg{
  height: 170px;
  width: 300px;
  margin-top: 20px;
}
#navCloud{
  height: 175px;
  width: 275px;
  margin-right: 20px;
  cursor: pointer;
  margin-top: 10px;
}
.beachContainer{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin-top: 0px;
}
#tikiImg{
  width: 500px;
  height: 400px;
}
#castleImg{
  width: 350px;
  height: 375px;
}
/*nav bar*/
.menu > div.visible{
  transform: translate3d(-250px, 0, 0);
  -ms-transform: translate3d(-250px, 0, 0);
  -webkit-transform: translate3d(-250px, 0, 0);
  -o-transform: translate3d(-250px, 0, 0);
  -moz-transform: translate3d(-250px, 0, 0);

}

.menu > div {
  background: rgba(18, 108, 161, 0.75);
  right: -250px;
  position: absolute;
  z-index: 2;
  top: 25%;
  width: 250px;
  height: 290px;
  box-sizing: border-box;
  border-radius: 20px 0 0 20px;
  -moz-box-sizing: border-box;
  -webkit-transition: -webkit-transform ease 250ms;
  -moz-transition: -webkit-transform ease 250ms;
  -ms-transition: -webkit-transform ease 250ms;
  -o-transition: -webkit-transform ease 250ms;
  transition: -webkit-transform ease 250ms;
  -webkit-transition: transform ease 250ms;
  -moz-transition: transform ease 250ms;
  -ms-transition: transform ease 250ms;
  -o-transition: transform ease 250ms;
  transition: transform ease 250ms;

}
.menu > div > .menu-item {
  float: left;
  width: 100%;
  font-size: 20px;
  margin-top: 20px;
  padding: 10px 15px;
  padding-bottom: 10px;
  border-bottom: solid 3px #363C40;
  cursor: pointer;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  color: white;
}
#bottomBar{
  display: flex;
  justify-content: center;
  border-bottom: none;
}
.linkIcon{
  height: 40px;
  width: 40px;
  margin-left: 10px;
}
/*end of nav bar*/

@media (max-width: 1050px){
  .homeBackGround{
    background-position: left;
  }
  .skyContainer{
  flex-wrap: wrap;
  justify-content: center;
  }
  .beachContainer{
  flex-wrap: wrap;
  margin-top: 240px;
  }
}
@media (max-width: 400px){
  .homeBackGround{
    background-position: left;
  }
  .beachContainer{
    margin-top: 0px;
  }
  #castleImg{
  width: 295px;
  height: 355px;
  padding-right: 150px;
  }
  #nameImg{
    width: 350px;
    margin-left: 0px;
  }
  .menu > div {
    top: 50%;
  }
}

/*end of home page*/

/*projects page*/
.projectsBackGround{
  background-image: url(./images/sandCastlePage.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.projectsTitle{
  display: flex;
  justify-content: center;
}
.projectHomeContainer{
  width: 90%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}
.clickTxt{
  display: flex;
  align-items: center;
}
#projectParagraph{
  width: 50%;
  text-align: center;
  background-color: rgba(230, 184, 156, .5);
  border-radius: 10px;
  padding: 10px 15px;
}
.projectImgWrapper{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 270px;
  width: 300px;
  cursor: pointer;
  padding-top: 20px;
}
.projectImgWrapper > p{
  text-align: center;
}
.projectImg{
  height: 80%;
  width: 98%;
}
.singleProjectWrapper{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
  padding-top: 10px;
}
#projectDiscription{
    padding: 10px 15px;
    background-color: rgba(104, 201, 243, .5);
    border-radius: 10px;
  }
.singleProjectImgs{
  height: 300px;
  width: 370px;
}
.arrowImg {
  display: flex;
  justify-content: center;
}
.backBtn{
  height: 40px;
  width: 100px;
  border-radius: 15px;
  font-size: 25px;
  background-color: rgba(230, 184, 156, 1);
  border: none;
  border-bottom: 5px solid rgba(234, 210, 172, .75);
  outline: none;
  /* Animation */
  transition: all 0.1s;
  -webkit-transition: all 0.1s;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -60px;
  cursor: pointer;
}
.backBtn:active {
    transform: translate(0px,5px);
    -webkit-transform: translate(0px,5px);
    border-bottom: .25px solid rgba(234, 210, 172, 1);
}
.backBtn > h4{
  padding: -20px;
}
.titleNTxtWrapper{
  display: flex;
  justify-content: center;
  text-align: center;
}
#projectDiscription{
}
.techList{
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 75%;
}
@media (max-width: 1050px){
  .projectsBackGround{
    background-position: right;
  }
  .projectHomeContainer{
    width: 100%;
  }
  .backBtn{
    width: 70px;
  }
  #projectParagraph{
    width: 100%;
  }
  .projectHomeContainer > h3{
    width: 100%;
  }
  .clickTxt{
    width: 100%;
    justify-content: center;
  }
  .singleProjectImgs{
    padding-top: 15px;
  }
  .techList{
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 100%;
  }

}
/*end of projects page*/

/*about page*/
.aboutBackGround{
  background-image: url(./images/tikiPage2.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.aboutMeWrapper{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 93%;
  padding-left: 50px;
  padding-top: 27px;
}
.aboutLeviTxtWrapper{
  width: 42%;
}
.aboutLeviTxt{
  padding: 5px;
  text-align: center;
  background-color: rgba(230, 184, 156, .75);
  border-radius: 10px;
  border: 2px solid rgba(234, 210, 172, .75);
}
.clickTxt{
  display: flex;
  align-items: center;
}
.aboutMeWrapper > h3{
  align-self: center;
}
.aboutMeImgWrapper{
  margin-top: 10px;
  cursor: pointer;
  display: flex;
  align-items: center;
}
.aboutMeImg{
  height: 225px;
  width: 225px;
  border-radius: 20%;
}
.aboutMeImgText{
  width: 225px;
  text-align: center;
  background-color: rgba(66, 129, 164, .85);
  border-radius: 10px;
  border: 2px solid rgba(156, 175, 183, .5);
}
.aboutMeImgText > p{
  padding: 0 8px;
}
#aboutMeArrow{
  margin-top: -28px;
  display: flex;
  justify-content: center;
}
@media (max-width: 1050px){
  .aboutMeWrapper{
  width: 100%;
  padding-left: 0px;
}
  .aboutLeviTxtWrapper{
  width: 80%;
}
  .clickTxt{
    width: 100%;
    justify-content: center;
  }
}
/*end of about page*/

